--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 asgiref==3.8.1
 Django==4.2.16
 django-debug-toolbar==4.4.6
+django-tinymce==4.1.0
 mysqlclient==2.2.6
 pillow==11.0.0
 python-dotenv==1.0.1
 sqlparse==0.5.1
-typing_extensions==4.12.2
 tzdata==2024.2
